# webinar

./: README.md  leap.yaml  leap_binder.py  leap_custom_test.py  leap_integration.py  leap_mapping.yaml  pyproject.toml  requirements.txt
model/: yolov7-webinar.h5
webinar/: config.py  config.yml
webinar/data/: preprocess.py
webinar/utils/: gcs_utils.py  metrics.py
